--- a/index.html
+++ b/index.html
@@ -9,40 +9,25 @@
 
 <body>
     <nav>
-        <h1>Welcome back!</h1>
+        <h1>DO YOUR WORK BOY!</h1>
         <h2 id="date"></h2>
-        <form action="https://duckduckgo.com/" method="get">
-            <input type="text" class="input" placeholder="Search with DuckDuckGo" name="q" autofocus />
+        <form action="https://www.google.com/" method="get">
+            <input type="text" class="input" placeholder="Search~" name="q" autofocus />
         </form>
         <ul>
-            <li>~/general </li>
-            <li><a href="https://gmail.com/">Gmail</a></li>
-            <li><a href="https://calendar.google.com/calendar/u/0/r?pli=1">Calendar</a></li>
-            <li><a href="https://www.office.com/?auth=1">Office</a></li>
-            <li><a href="https://onedrive.live.com/">One Drive</a></li>
-            <li><a href="https://monkeytype.com/">MonkeyType</a></li>
-        </ul>
-        <ul>
             <li>~/dev </li>
-            <li><a href="https://wiki.archlinux.org/">Arch Wiki</a></li>
-            <li><a href="https://github.com/druxorey">GitHub</a></li>
-            <li><a href="https://github.com/druxorey/dotfiles">Dots</a></li>
-            <li><a href="https://devdocs.io/">Devdocs</a></li>
-            <li><a href="https://cipalonline.github.io/">CIPAL</a></li>
+            <li><a href="https://github.com/Ace-Extrenof">GitHub</a></li>
         </ul>
         <ul>
             <li>~/school 拾</li>
-            <li><a href="https://portalasig2.ciens.ucv.ve/#/">PortalAsig2</a></li>
             <li><a href="https://www.w3schools.com">W3Schools</a></li>
-            <li><a href="https://conest.ciens.ucv.ve/webapp/">Conest</a></li>
+            <li><a href="https://www.wikipedia.org/">Wikipedia</a></li>
         </ul>
         <ul>
-            <li>~/reddit </li>
+            <li>~/socials  </li>
             <li><a href="https://reddit.com/">reddit</a></li>
-            <li><a href="https://www.reddit.com/user/druxorey/m/techthings/">m/techthings</a></li>
-            <li><a href="https://reddit.com/r/unixporn/">r/unixporn</a></li>
-            <li><a href="https://reddit.com/r/archlinux/">r/archlinux</a></li>
-            <li><a href="https://www.reddit.com/r/technicalminecraft/">r/technicalminecraft</a></li>
+            <li><a href="https://reddit.com/r/unixporn/">r/unix</a></li>
+            <li><a href="https://www.youtube.com/">Youtube</a></li>
         </ul>
     </nav>
 
