--- a/index.html
+++ b/index.html
@@ -15,24 +15,25 @@
             <input type="text" class="input" placeholder="Search~" name="q" autofocus />
         </form>
         <ul>
-            <li>~/dev </li>
+            <li>~/dev </li>
             <li><a href="https://github.com/Ace-Extrenof">GitHub</a></li>
         </ul>
         <ul>
-            <li>~/school 拾</li>
+            <li>~/school </li>
             <li><a href="https://www.w3schools.com">W3Schools</a></li>
             <li><a href="https://www.wikipedia.org/">Wikipedia</a></li>
         </ul>
         <ul>
-            <li>~/socials  </li>
+            <li>~/socials  </li>
             <li><a href="https://reddit.com/">reddit</a></li>
             <li><a href="https://reddit.com/r/unixporn/">r/unix</a></li>
             <li><a href="https://www.youtube.com/">Youtube</a></li>
+            <li><a href="">[redacted]</a></li>
         </ul>
     </nav>
 
     <div class="image">
-        <a href="https://druxorey.github.io/"><img alt="fem" src="static/images/image.jpg"></a>
+        <a href="https://github.com/Ace-Extrenof"><img alt="fem" src="static/images/image.jpg"></a>
     </div>
     <script type="text/javascript" src="scripts/get_date.js"></script>
 </body>
