--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <nav>
         <h1>DO YOUR WORK BOY!</h1>
         <h2 id="date"></h2>
-        <form action="https://www.google.com/" method="get">
+        <form action="https://google.com/" method="get">
             <input type="text" class="input" placeholder="Search~" name="q" autofocus />
         </form>
         <ul>
