--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <ul>
             <li>~/dev </li>
             <li><a href="https://github.com/Ace-Extrenof">GitHub</a></li>
-            <li><a href="https://www.blackbox.ai"></a></li>
+            <li><a href="https://www.blackbox.ai">A.I</a></li>
         </ul>
         <ul>
             <li>~/school </li>
