--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <title>~/startpage</title>
     <link rel="icon" href="static/images/ico.ico" type="image/x-icon" />
-    <link rel="stylesheet" href="static/styles/style1.css">
+    <link rel="stylesheet" href="static/styles/style.css">
 </head>
 
 <body>
