--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </nav>
 
     <div class="image">
-        <a href="https://github.com/Ace-Extrenof"><img alt="castleboi" src="static/images/city.jpg"></a>
+        <a href="https://github.com/Ace-Extrenof"><img alt="castleboi" src="static/images/castle.png"></a>
     </div>
     <script type="text/javascript" src="scripts/get_date.js"></script>
 </body>
