updated ~/dev section

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <li>~/dev </li>
             <li><a href="https://github.com/Ace-Extrenof">GitHub</a></li>
             <li><a href="https://www.blackbox.ai">A.I</a></li>
+            <li><a href="https://github.com/Ace-Extrenof/.dotfiles">~/.dotfiles</a></li>
         </ul>
         <ul>
             <li>~/school </li>
