--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </nav>
 
     <div class="image">
-        <a href="https://github.com/Ace-Extrenof"><img alt="castleboi" src="static/images/castle.png"></a>
+        <a href="https://github.com/Ace-Extrenof"><img alt="castleboi" src="static/images/idk.jpg"></a>
     </div>
     <script type="text/javascript" src="scripts/get_date.js"></script>
 </body>
