--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
             <li><a href="">[redacted]</a></li>
         </ul>
     </nav>
-    <a href="https://github.com/Ace-Extrenof"><img alt="castleboi" src="static/images/pika~.jpg"></a>
+    <div class="img">
+        <a href="https://github.com/Ace-Extrenof"><img alt="castleboi" src="static/images/pika~.jpg"></a>
+    </div>
     <script type="text/javascript" src="scripts/get_date.js"></script>
 </body>
 
