--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
             <li><a href="">[redacted]</a></li>
         </ul>
     </nav>
+    <div class="">
+        
+    </div>
     <a href="https://github.com/Ace-Extrenof"><img alt="castleboi" src="static/images/pika~.jpg"></a>
     <script type="text/javascript" src="scripts/get_date.js"></script>
 </body>
