--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             <li><a href="https://reddit.com/r/unixporn/">r/unix</a></li>
             <li><a href="https://www.youtube.com/">Youtube</a></li>
             <li><a href="https://discord.com/channels/@me">Discord</a></li>
+            <li><a href="https://in.pinterest.com/">Pinterest</a></li>
             <li><a href="">[redacted]</a></li>
         </ul>
     </nav>
