--- a/index.html
+++ b/index.html
@@ -34,6 +34,12 @@
             <li><a href="https://in.pinterest.com/">Pinterest</a></li>
             <li><a href="">[redacted]</a></li>
         </ul>
+        <ul>
+            <li>~/manga</li>
+            <li><a href=""></a>Gachiakuta</li>
+            <li><a href=""></a>My Hero Academia</li>
+            <li><a href=""></a>One Piece</li>
+        </ul>
     </nav>
     <div class="image">
         <a href="https://github.com/Ace-Extrenof"><img alt="castleboi" src="static/images/pika~.jpg"></a>
