added font and fixed links

--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
         </ul>
         <ul>
             <li>~/manga</li>
-            <li><a href="https://mangafire.to/read/gachiakuta.1n2xq/en/chapter-1"></a>Gachiakuta</li>
-            <li><a href="https://mangafire.to/read/my-hero-academia.kkvk9/en/chapter-1"></a>My Hero Academia</li>
-            <li><a href="https://mangafire.to/read/one-piece.dkw/en/chapter-1"></a>One Piece</li>
+            <li><a href="https://mangafire.to/read/gachiakuta.1n2xq/en/chapter-1">Gachiakuta</a></li>
+            <li><a href="https://mangafire.to/read/my-hero-academia.kkvk9/en/chapter-1">My Hero Academia</a></li>
+            <li><a href="https://mangafire.to/read/one-piece.dkw/en/chapter-1">One Piece</a></li>
         </ul>
     </nav>
     <div class="image">
