--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </ul>
     </nav>
     <div class="image">
-        <a href="https://github.com/Ace-Extrenof"><img alt="castleboi" src="static/images/castle.png"></a>
+        <a href="https://github.com/Ace-Extrenof"><img alt="castleboi" src="static/images/pika~.jpg"></a>
     </div>
     <script type="text/javascript" src="scripts/get_date.js"></script>
 </body>
