--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <li><a href="https://github.com/Ace-Extrenof">GitHub</a></li>
             <li><a href="https://www.blackbox.ai">A.I</a></li>
             <li><a href="https://github.com/Ace-Extrenof/.dotfiles">~/.dotfiles</a></li>
+            <li><a href="https://www.linuxfromscratch.org/lfs/downloads/stable/LFS-BOOK-12.1.pdf">~/LFS</a></li>
         </ul>
         <ul>
             <li>~/school </li>
