--- a/index.html
+++ b/index.html
@@ -11,14 +11,13 @@
     <nav>
         <h1>DO YOUR WORK BOY!</h1>
         <h2 id="date"></h2>
-        <form action="https://google.com/" method="get">
+        <form action="https://duckduckgo.com" method="get">
             <input type="text" class="input" placeholder="Search~" name="q" autofocus />
         </form>
         <ul>
             <li>~/dev </li>
             <li><a href="https://github.com/Ace-Extrenof">GitHub</a></li>
             <li><a href="https://www.blackbox.ai">A.I</a></li>
-            <li><a href="https://github.com/Ace-Extrenof/.dotfiles">~/.dotfiles</a></li>
             <li><a href="https://www.linuxfromscratch.org/lfs/downloads/stable/LFS-BOOK-12.1.pdf">~/LFS</a></li>
         </ul>
         <ul>
@@ -32,8 +31,7 @@
             <li><a href="https://reddit.com/r/unixporn/">r/unix</a></li>
             <li><a href="https://www.youtube.com/">Youtube</a></li>
             <li><a href="https://discord.com/channels/@me">Discord</a></li>
-            <li><a href="https://in.pinterest.com/">Pinterest</a></li>
-            <li><a href="">[redacted]</a></li>
+            <li><a href="https://web.whatsapp.com/">WhatsApp</a></li>
         </ul>
         <ul>
             <li>~/manga</li>
